--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "babel-cli": "^6.26.0",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
+    "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.24.1",
     "babel-register": "^6.26.0",
+    "flow-bin": "^0.70.0",
     "webpack": "^4.6.0",
     "webpack-cli": "^2.0.14"
   },
