--- a/.eslintrc
+++ b/.eslintrc
@@ -1,17 +1,14 @@
 {
-  "plugins": ["prettier", "flowtype"],
   "parser": "babel-eslint",
-  "env": {
-    "browser": true,
-    "node": true,
-    "es6": true
-  },
+  "plugins": [
+    "prettier",
+    "flowtype"
+  ],
   "extends": [
-    "airbnb",
     "plugin:prettier/recommended",
     "plugin:flowtype/recommended"
   ],
   "rules": {
-    "import/no-extraneous-dependencies": ["error", { "devDependencies": true }]
+    "import/no-extraneous-dependencies": 0
   }
 }
